kill_user = executable(
  'kill-user',
  files('kill-user.cc'),
  install : true,
  install_dir : libexecdir / 'lix',
)

run_pager = executable(
  'run-pager',
  files('run-pager.cc'),
  install : true,
  install_dir : libexecdir / 'lix',
)

unix_bind_connect = executable(
  'unix-bind-connect',
  files('unix-bind-connect.cc'),
  install : true,
  install_dir : libexecdir / 'lix',
)
